k8s/tsm/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spring-petclinic-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: spc-tls
      hosts:
        - "spring-petclinic.pa-bthelen-demo-1.betlab.cloud"
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - "spring-petclinic.pa-bthelen-demo-1.betlab.cloud"
