k8s/tsm/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-petclinic-virtual-service
  namespace: spring-petclinic
spec:
  hosts:
    - "spring-petclinic.pa-bthelen-demo-1.betlab.cloud"
  gateways:
    - spring-petclinic-gateway.istio-system.svc.cluster.local
  http:
    - route:
        - destination:
            host: api-gateway
            port:
              number: 8080
